[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdx-viewer"
version = "0.1.1"
description = "A beautiful Markdown viewer for terminal with code execution support"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["markdown", "terminal", "cli", "viewer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "wcwidth>=0.2.5",
    "pygments>=2.14.0",
    "markdown>=3.4.0",
]

[project.scripts]
mdx = "mdx.cli:main"

[project.urls]
Homepage = "https://github.com/mmx8lb/mdx"
Repository = "https://github.com/mmx8lb/mdx"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
